CSSSelectorParser: usage reporting should check for stylesheet

StyleSheet is not always defined in the context of CSSSelectorParser.
This patch adds a check to usage reporting that verifies that there's a
stylesheet.

BUG=chromium:769670
R=pfeldman

Change-Id: I890e561092cf2e53b9f3c392b9e3c4be7fdcb82d
Reviewed-on: https://chromium-review.googlesource.com/744592
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Commit-Queue: Andrey Lushnikov <lushnikov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512752}