third_party/WebKit/Source/core/css/parser/CSSSelectorParser.cpp
@@ -1013,7 +1013,7 @@ void CSSSelectorParser::RecordUsageAndDeprecations(
       }
       if (feature != WebFeature::kNumberOfFeatures) {
         if (!Deprecation::DeprecationMessage(feature).IsEmpty() &&
-            style_sheet_->AnyOwnerDocument()) {
+            style_sheet_ && style_sheet_->AnyOwnerDocument()) {
           Deprecation::CountDeprecation(*style_sheet_->AnyOwnerDocument(),
                                         feature);
         } else {
